@@ -1,25 +1,0 @@
-#Thu, 08 Sep 2011 18:10:29 +0700
-
-ant=ant-launcher.jar,ant.jar,antcontrib.jar
-
-docbook=*
-
-fop=avalon-framework.jar,batik.jar,commons-io.jar,commons-logging.jar,fop.jar,xmlgraphics-commons.jar
-
-itext=itext.jar
-
-javahelp=jh.jar
-
-jeditsyntax=jEdit-syntax.jar
-
-jgraph=jgraph.jar
-
-nsis=*
-
-trr=readregistry.exe
-
-txm=jxpdl.jar
-
-xalan=serializer.jar,xalan.jar
-
-xerces=xercesImpl.jar,xml-apis.jar
